--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "pg": "^8.6.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
+    "react-map-gl-geocoder": "^2.2.0",
+    "use-position": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
