--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,11 @@
   "extends": [
     "plugin:react/recommended",
     "eslint:recommended",
-    "standard"
+    "standard",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
   ],
   "settings": {
     "react": {
@@ -15,36 +19,8 @@
     }
   },
   "rules": {
-    "semi": [
-      "error",
-      "always"
-    ],
-    "padded-blocks": 0,
-    "arrow-parens": [
-      "error",
-      "as-needed"
-    ],
-    "curly": [
-      "error",
-      "multi-line"
-    ],
-    "no-console": [
-      "error",
-      {
-        "allow": [
-          "warn",
-          "error"
-        ]
-      }
-    ],
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "always",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ]
+    "prettier/prettier": "error",
+    
   },
   "overrides": [
     {
