--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A full stack JavaScript solo project.",
   "main": "server/index.js",
   "scripts": {
+    "lint": "eslint .",
     "build": "webpack --mode=production",
     "start": "node server/index.js",
     "dev": "npm-run-all --silent --parallel dev:*",
@@ -31,10 +32,12 @@
     "@babel/plugin-transform-react-jsx": "^7.16.0",
     "babel-loader": "^8.2.3",
     "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.27.1",
     "husky": "^7.0.4",
@@ -42,6 +45,7 @@
     "markuplint": "^1.11.4",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
