--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.18",
     "react-map-gl-geocoder": "^2.2.0",
+    "react-spring-bottom-sheet": "^3.4.0",
     "use-position": "^1.0.0"
   },
   "devDependencies": {
