Revised code with recommendations.

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,15 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
+    ]
   },
   "overrides": [
     {
