--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-image-resizer": "^2.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "geolocator": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.6.0",
