--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "argon2": "^0.28.3",
+    "aws-sdk": "^2.1056.0",
     "browser-image-resizer": "^2.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "geolocator": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "pg": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
