--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-map-gl-geocoder": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-spring-bottom-sheet": "^3.4.0",
-    "use-position": "^1.0.0"
+    "use-position": "^1.0.0",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
