--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer-s3": "^2.10.0",
     "pg": "^8.6.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.18",
     "react-map-gl-geocoder": "^2.2.0",
